--- a/src/components/productCard/Productcard.css
+++ b/src/components/productCard/Productcard.css
@@ -1,7 +1,47 @@
-.p-4{
-    width: -webkit-fill-available;
-    margin: auto;
-}
-.bg-gray-300 {
-    margin: 15px;
-}
+/* ProductCard.css */
+
+.product-square-card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .product-square-image {
+    position: relative;
+    overflow: hidden; /* Ensure the overflow is hidden */
+  }
+  
+  .product-square-image img {
+    width: 100%;
+    height: auto;
+
+  }
+  
+  .product-square-image::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.4; /* Adjust the opacity as needed */
+
+    box-sizing: border-box; /* Ensure the border-box model is used */
+    border: 2px solid transparent; /* Add a transparent border */
+  }
+  
+  .product-square-card p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white; /* Set the text color */
+    font-size: 2.3rem; /* Adjust the font size as needed */
+    font-weight: bold;
+    max-width: 90%; /* Adjust the maximum width as needed */
+    text-align: center;
+    white-space: nowrap; /* Prevent text from wrapping */
+    text-overflow: ellipsis; /* Add ellipsis (...) for overflowed text */
+  }
+  
