--- a/src/components/bestcase/SlidingText.css
+++ b/src/components/bestcase/SlidingText.css
@@ -8,18 +8,21 @@
   }
   
   .sliding-text span {
-    font-size: 6rem; /* Adjust the font size as needed */
+    font-size: 5rem; /* Adjust the font size as needed */
+    color: white;
     font-weight: bold;
     text-transform: uppercase;
     display: inline-block; /* Prevents unnecessary whitespace around inline elements */
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Lilita One', sans-serif;
+    src: url('./src/assets/LilitaOne-Regular.ttf');
+
   }
   
   /* Desktop styles */
   @media (min-width: 768px) {
     .sliding-text {
       white-space: nowrap;
-      animation: slideTextDesktop 12s linear infinite; /* Adjust the duration for desktop */
+      animation: slideTextDesktop 10s linear infinite; /* Adjust the duration for desktop */
     }
   
     @keyframes slideTextDesktop {
@@ -36,7 +39,7 @@
   @media (max-width: 767px) {
     .sliding-text {
       white-space: nowrap;
-      animation: slideTextPhone 5s linear infinite; /* Adjust the duration for phones */
+      animation: slideTextPhone 6s linear infinite; /* Adjust the duration for phones */
     }
   
     @keyframes slideTextPhone {
