--- a/src/components/bigcomponent/BigText.css
+++ b/src/components/bigcomponent/BigText.css
@@ -21,7 +21,7 @@
   .small-text span {
     font-size: 2rem; /* Adjust the font size for the small text as needed */
     font-weight: bold;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Lilita One', sans-serif;
   }
   @media (max-width: 767px){
     .big-text span {
