--- a/src/components/productCard/Productcard.css
+++ b/src/components/productCard/Productcard.css
@@ -4,17 +4,20 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    
+    
   }
   
   .product-square-image {
     position: relative;
     overflow: hidden; /* Ensure the overflow is hidden */
+
   }
   
   .product-square-image img {
-    width: 100%;
-    height: auto;
-
+    width: 400px;
+    height: 400px;
+    border: solid black 2px;
   }
   
   .product-square-image::before {
@@ -24,7 +27,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: rgba(255, 255, 255, 0);
     opacity: 0.4; /* Adjust the opacity as needed */
 
     box-sizing: border-box; /* Ensure the border-box model is used */
@@ -44,4 +47,11 @@
     white-space: nowrap; /* Prevent text from wrapping */
     text-overflow: ellipsis; /* Add ellipsis (...) for overflowed text */
   }
-  
+
+  @media (max-width: 760px){
+    .product-square-image img{
+      height: auto;
+      width: 100%;
+    }
+ 
+  }
