--- a/src/components/singleImage/SingleImage.css
+++ b/src/components/singleImage/SingleImage.css
@@ -1,29 +1,29 @@
 /* SingleImage.css */
 
 .single-image-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000; /* Set the background color as needed */
+  border-radius: 5px;
+  
+}
 
-    background-color: #f0f0f0; /* Set the background color as needed */
-  }
-  
-  .image-wrapper {
-    max-width: 80%; /* Set the maximum width of the image wrapper */
-  }
-  
-  .centered-image {
-    width: 100%;
-    height: auto;
-    display: block;
-    padding: 25px;
-    margin: 0 auto;
-    max-height: 100%; /* Ensure the image doesn't exceed the container's height */
-  }
-  .centered-text {
-    font-family: 'Arial', sans-serif; /* Change the font family as needed */
-    font-size: 2rem; /* Adjust the font size as needed */
-    color: #333; /* Set the text color */
-    margin-bottom: 20px; /* Add some margin below the text */
-    padding-top: 20px;
-  }
+.image-wrapper {
+  width: 100%;
+  max-width: 100%; /* Set the maximum width of the image wrapper */
+}
+
+.centered-image {
+  width: 100%;
+  height: auto;
+  display: block;
+
+  max-height: 100%; /* Ensure the image doesn't exceed the container's height */
+
+
+}
+
+.custom-cursor {
+  cursor: url('./icons8-cursor-60.png'), auto;
+}
